--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,4 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Jaro:wght@400;700&display=swap"); */
 @import "tailwindcss";
 
 :root {
@@ -5,7 +6,7 @@
   --foreground: #171717;
 }
 
-@theme inline {
+:root {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -22,5 +23,11 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
+
+* {
+    box-sizing: border-box;
+    /* font-family: Montserrat; */
+}
+
+
